--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,6 @@ cmake_minimum_required(VERSION 3.22.1)
 
 project(battery)
 
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "/usr/local/bin")
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "~/.local/bin/")
 
 add_executable(battery src/battery.c)
